// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:InputSubForm base 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      class="cxd-Panel cxd-Panel--default cxd-Panel--form"
      style="position: relative;"
    >
      <div
        class="cxd-Panel-heading"
      >
        <h3
          class="cxd-Panel-title"
        >
          <span
            class="cxd-TplField"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="cxd-Panel-body"
      >
        <form
          class="cxd-Form cxd-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--normal"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    子Form
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-SubFormControl cxd-Form-control"
            >
              <div
                class="cxd-SubForm-values"
              >
                <div
                  class="cxd-SubForm-value"
                  data-position="bottom"
                  data-tooltip="编辑详情"
                >
                  <span
                    class="cxd-SubForm-valueLabel"
                  >
                    <span
                      class="cxd-TplField"
                    >
                      <span>
                        设置子表单
                      </span>
                    </span>
                  </span>
                  <a
                    class="cxd-SubForm-valueEdit"
                  >
                    <icon-mock
                      classname="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cxd-Panel-footerWrap"
      >
        <div
          class="cxd-Panel-btnToolbar cxd-Panel-footer"
        >
          <button
            class="cxd-Button cxd-Button--primary cxd-Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
      <div
        class="resize-sensor"
        style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
  
        <div
          class="resize-sensor-expand"
          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
        >
          
    
          <div
            style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
          />
          
  
        </div>
        
  
        <div
          class="resize-sensor-shrink"
          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
        >
          
    
          <div
            style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
          />
          
  
        </div>
        
  
        <div
          class="resize-sensor-appear"
          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
        />
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content in"
    >
      <div
        class="cxd-Modal-header"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="cxd-Modal-title"
        >
          配置子表单
        </div>
      </div>
      <div
        class="cxd-Modal-body"
        role="dialog-body"
      >
        <div
          class="cxd-Form cxd-Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="cxd-Form-item cxd-Form-item--horizontal"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label cxd-Form-itemColumn--normal"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-value"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="cxd-Form-item cxd-Form-item--horizontal"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label cxd-Form-itemColumn--normal"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    B
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-value"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cxd-Modal-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:InputSubForm with addButtonClassName & itemsClassName & itemClassName & addButtonText & labelField 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-SubFormControl cxd-Form-control"
          >
            <div
              class="cxd-SubForm-values items-wrapper"
            >
              <div
                class="cxd-SubForm-value item-classname"
              >
                <span
                  class="cxd-SubForm-valueLabel"
                >
                  设置
                </span>
                <a
                  class="cxd-SubForm-valueEdit"
                  data-index="0"
                >
                  <icon-mock
                    classname="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="cxd-SubForm-valueDel"
                  data-index="0"
                >
                  <icon-mock
                    classname="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="cxd-SubForm-value item-classname"
              >
                <span
                  class="cxd-SubForm-valueLabel"
                >
                  设置
                </span>
                <a
                  class="cxd-SubForm-valueEdit"
                  data-index="1"
                >
                  <icon-mock
                    classname="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="cxd-SubForm-valueDel"
                  data-index="1"
                >
                  <icon-mock
                    classname="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
            </div>
            <div
              class="cxd-SubForm-toolbar"
            >
              <button
                class="cxd-Button cxd-SubForm-addBtn thisis-add-btn"
                type="button"
              >
                <icon-mock
                  classname="icon icon-plus"
                  icon="plus"
                />
                <span>
                  自定义的新增
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:InputSubForm with draggable & addable & removable 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  子Form
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-SubFormControl cxd-Form-control"
          >
            <div
              class="cxd-SubForm-values"
            >
              <div
                class="cxd-SubForm-value"
              >
                <a
                  class="cxd-SubForm-valueDragBar"
                >
                  <icon-mock
                    classname="icon icon-drag-bar"
                    icon="drag-bar"
                  />
                </a>
                <span
                  class="cxd-SubForm-valueLabel"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      设置val-b-change
                    </span>
                  </span>
                </span>
                <a
                  class="cxd-SubForm-valueEdit"
                  data-index="0"
                >
                  <icon-mock
                    classname="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="cxd-SubForm-valueDel"
                  data-index="0"
                >
                  <icon-mock
                    classname="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="cxd-SubForm-value"
              >
                <a
                  class="cxd-SubForm-valueDragBar"
                >
                  <icon-mock
                    classname="icon icon-drag-bar"
                    icon="drag-bar"
                  />
                </a>
                <span
                  class="cxd-SubForm-valueLabel"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      设置val-c
                    </span>
                  </span>
                </span>
                <a
                  class="cxd-SubForm-valueEdit"
                  data-index="1"
                >
                  <icon-mock
                    classname="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="cxd-SubForm-valueDel"
                  data-index="1"
                >
                  <icon-mock
                    classname="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="cxd-SubForm-value"
              >
                <a
                  class="cxd-SubForm-valueDragBar"
                >
                  <icon-mock
                    classname="icon icon-drag-bar"
                    icon="drag-bar"
                  />
                </a>
                <span
                  class="cxd-SubForm-valueLabel"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      设置val-d
                    </span>
                  </span>
                </span>
                <a
                  class="cxd-SubForm-valueEdit"
                  data-index="2"
                >
                  <icon-mock
                    classname="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="cxd-SubForm-valueDel"
                  data-index="2"
                >
                  <icon-mock
                    classname="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
            </div>
            <div
              class="cxd-SubForm-toolbar"
            >
              <span
                class="cxd-Combo-dragableTip"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:InputSubForm with multiple & maxLength & btnLabel 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  子Form
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-SubFormControl cxd-Form-control"
          >
            <div
              class="cxd-SubForm-values"
            >
              <div
                class="cxd-SubForm-value"
              >
                <span
                  class="cxd-SubForm-valueLabel"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      设置val-1-1
                    </span>
                  </span>
                </span>
                <a
                  class="cxd-SubForm-valueEdit"
                  data-index="0"
                >
                  <icon-mock
                    classname="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="cxd-SubForm-valueDel"
                  data-index="0"
                >
                  <icon-mock
                    classname="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="cxd-SubForm-value"
              >
                <span
                  class="cxd-SubForm-valueLabel"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      设置val-2-1
                    </span>
                  </span>
                </span>
                <a
                  class="cxd-SubForm-valueEdit"
                  data-index="1"
                >
                  <icon-mock
                    classname="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="cxd-SubForm-valueDel"
                  data-index="1"
                >
                  <icon-mock
                    classname="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
            </div>
            <div
              class="cxd-SubForm-toolbar"
            >
              <button
                class="cxd-Button cxd-SubForm-addBtn"
                disabled=""
                type="button"
              >
                <icon-mock
                  classname="icon icon-plus"
                  icon="plus"
                />
                <span>
                  新增一项
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
